Changed Image Tags

--- a/Assignments/J_Cope/experience.html
+++ b/Assignments/J_Cope/experience.html
@@ -39,70 +39,70 @@
 <div id="wrap">
 
 	<div id="header" align ="center">
-	<img src="/images/banner1.jpg" width="733" height="160"/>
+	<img src="/images/J_Cope/banner1.jpg" width="733" height="160"/>
 	</div>
 	
 	<div id="main">
     <p>
     <u><center><h2>Album Artwork</h2></u>
     <br>
-    <center><img src="/images/wayne1.jpg" width="300" height="300"
+    <center><img src="/images/J_Cope/wayne1.jpg" width="300" height="300"
     <br>
     <br>
     <br>
     Creative Direction for Lil Wayne - I Am Not A Human Being II - 2013
     <br>
     <br>
-    <img src="/images/wayne2.jpg" width="300" height="300"
+    <img src="/images/J_Cope/wayne2.jpg" width="300" height="300"
     <br>
     <br>
     <br>
     Creative Direction for Lil Wayne - Love Me (Single) - 2013
     <br>
     <br>
-    <img src="/images/pusha.jpg" width="300" height="300"
+    <img src="/images/J_Cope/pusha.jpg" width="300" height="300"
     <br>
     <br>
     <br>
     Creative Direction for Pusha T - Wrath of Caine (Mixtape) - 2013
     <br>
     <br>
-    <img src="/images/rocky.jpg" width="300" height="300"
-	<br>
+    <img src="/images/J_Cope/rocky.jpg" width="300" height="300"
+    <br>
     <br>
     <br>
     Creative Direction for Asap Rocky - Long. Live. ASAP (Album) - 2013
     <br>
     <br>
-    <img src="/images/kanye.jpg" width="300" height="300"
+    <img src="/images/J_Cope/kanye.jpg" width="300" height="300"
     <br>
     <br>
     <br>
     Creative Direction for GOOD Music - Cruel Summer (Album) - 2012
     <br>
     <br>
-    <img src="/images/kanye1.jpg" width="300" height="300"
+    <img src="/images/J_Cope/kanye1.jpg" width="300" height="300"
     <br>
     <br>
     <br>
     Creative Direction for Kanye West - Clique (Single) - 2012
     <br>
     <br>
-    <img src="/images/twochainz.jpg" width="300" height="300"
+    <img src="/images/J_Cope/twochainz.jpg" width="300" height="300"
     <br>
     <br>
     <br>
     Creative Direction for 2 Chainz - Based on a T.R.U. Story (Album) - 2012
     <br>
     <br>
-    <img src="/images/wzrd.jpg" width="300" height="300"
+    <img src="/images/J_Cope/wzrd.jpg" width="300" height="300"
     <br>
     <br>
     <br>
     Creative Direction for Kid Cudi & Dot da Genius - WZRD (Album) - 2012
     <br>
     <br>
-    <img src="/images/wtt.jpg" width="300" height="300"
+    <img src="/images/J_Cope/wtt.jpg" width="300" height="300"
     <br>
     <br>
     <br>
@@ -112,7 +112,7 @@
 	
     <u><center><h2>Stage Design</h2></u>
     <br>
-    <center><img src="/images/wtttour.jpg" width="320" height="240"
+    <center><img src="/images/J_Cope/wtttour.jpg" width="320" height="240"
     <br>
     <br>
     <br>
@@ -121,7 +121,7 @@
     2011-2012
     <br>
     <br>
-    <img src="/images/kanyetour.jpg" width="320" height="240"
+    <img src="/images/J_Cope/kanyetour.jpg" width="320" height="240"
     <br>
     <br>
     <br>
