--- a/Assignments/J_Cope/index.html
+++ b/Assignments/J_Cope/index.html
@@ -89,11 +89,11 @@ function startBanner(firstImageID){
 	}
 		
 	#banner1{
-	background-image:url(/images/homebanner1.jpg);
+	background-image:url(/images/J_Cope/homebanner1.jpg);
 	}
 	
 	#banner2{
-	background-image:url(/images/homebanner2.jpg);
+	background-image:url(/images/J_Cope/homebanner2.jpg);
 	}
 	
 	</style>
