--- a/Assignments/J_Cope/skills.html
+++ b/Assignments/J_Cope/skills.html
@@ -49,7 +49,7 @@
      <br>
     <u><center><h3>Adobe Illustrator</h3></u>
     <br>
-    <img src="/images/adobegraph.jpg" width="320" height="240"
+    <img src="/images/J_Cope/adobegraph.jpg" width="320" height="240"
     <br>
     <br>
     <br>
@@ -58,7 +58,7 @@
     <br>
      <u><center><h3>Adobe Photoshop</h3></u>
     <br>
-    <img src="/images/adobegraph1.jpg" width="320" height="240"
+    <img src="/images/J_Cope/adobegraph1.jpg" width="320" height="240"
     <br>
     <br>
     <br>
@@ -67,7 +67,7 @@
     <br>
     <u><center><h3>Stage Design</h3></u>
     <br>
-    <img src="/images/stagegraph.jpg" width="320" height="240"
+    <img src="/images/J_Cope/stagegraph.jpg" width="320" height="240"
     <br>
     <br>
     <br>
@@ -76,7 +76,7 @@
     <br>
      <u><center><h3>Store Management</h3></u>
     <br>
-    <img src="/images/managegraph.jpg" width="320" height="240"
+    <img src="/images/J_Cope/managegraph.jpg" width="320" height="240"
     <br>
     <br>
     <br>
