--- a/Assignments/index.html
+++ b/Assignments/index.html
@@ -10,7 +10,7 @@
 
 <center><a href="A_Houck/index.html">Adam Houck </a></center>
 <center><a href="Sarun_Sangchanintra/index.html">Sarun Sangchanintra</a></center>
-
+<center><a href="J_Cope/index.html">Josh Cope </a></center>
 
 <br>
 <br>
