--- a/Teams/Amazing-As/Dog Website/pitbull.html
+++ b/Teams/Amazing-As/Dog Website/pitbull.html
@@ -75,12 +75,12 @@ background-repeat:repeat;
     <p>&nbsp;</p>
   </div>
   <div id="Content">
-    <figure><img src="" width="320" height="240">
+    <figure><img src="images/pitbull.jpg" width="320" height="240">
     <figcaption>
 	  <p>Picture of a Pitbull</p>
    </figcaption>
    </figure>
-    <h1> Fun Facts about Shih Tzu: </h1>
+    <h1> Fun Facts about Pitbulls </h1>
     <ul>
       <li><span dir="LTR"> </span>The term pit bull refers to certain breeds of dog – namely, the American Pit Bull Terrier, 
       the American Staffordshire Terrier, the Staffordshire Bull Terrier, and any crosses between the three.</li>
@@ -98,7 +98,7 @@ background-repeat:repeat;
     <br>
     <br>
     <audio controls>
-    <source src="" type="audio/wav">
+    <source src="sounds/pitbull.mp3" type="audio/mp3">
      Your browser does not support the audio element.
     </audio>
     
