--- a/Teams/Amazing-As/Dog Website/pitbull.html
+++ b/Teams/Amazing-As/Dog Website/pitbull.html
@@ -75,7 +75,7 @@ background-repeat:repeat;
     <p>&nbsp;</p>
   </div>
   <div id="Content">
-    <figure><img src="images/pitbull.jpg" width="320" height="240">
+    <figure><img src="images/pitbull.jpeg" width="320" height="240">
     <figcaption>
 	  <p>Picture of a Pitbull</p>
    </figcaption>
