--- a/Teams/Eclectic-A-Team/Project_One/index.html
+++ b/Teams/Eclectic-A-Team/Project_One/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
+      <link rel="stylesheet" type="text/css" href="player.css"/>  
+      <script src="player.js"></script>
       <title>Eclectic A-Team Project One</title>
       <style type="text/css">
          .pad{
@@ -13,6 +15,33 @@
   <body>
     <div style="text-align:center">
     </div>
+      <div id="musicContainer">
+<div id="dropArea" ondrop="drop(event);startMusic()" ondragover="return dragOver(event)">
+<!-- This is the play area, images dragged here will play music if they are recognized -->
+</div>
+<div id="artist">
+<!-- Displays the artist name and song title -->
+</div>
+<div id="musicList" ondragover="dragOver(event)" ondrop="dropReturn(event)">
+<!-- Below is the image that can be dragged onto the play area -->
+<ul class="images">
+<li>
+<img class="albumArt" id="vaccines" src="vaccines_coverart.jpg" draggable="true"
+ondragstart="return drag(event)" ondragend="dragEnd(event)">
+</li>
+<li>
+<img class="albumArt" id="rockon" src="rockon_coverart.jpg" draggable="true"
+ondragstart="return drag(event)" ondragend="dragEnd(event)">
+</li>
+</ul>
+</div>
+</div>
+<br>
+<div id="music" style="display:none;">
+<!-- When the image is dragged into the specified area a music player will show here -->
+</div>
+
+
   </body>
 
 
