--- a/Teams/Eclectic-A-Team/Project_One/index.html
+++ b/Teams/Eclectic-A-Team/Project_One/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
       <link rel="stylesheet" type="text/css" href="player.css"/>  
-      <script src="player.js"></script>
+      <script src="player.js" type="text/javascript"></script>
       <title>Eclectic A-Team Project One</title>
       <style type="text/css">
          .pad{
