--- a/Teams/Eclectic-A-Team/Project_One/index.html
+++ b/Teams/Eclectic-A-Team/Project_One/index.html
@@ -37,7 +37,7 @@ ondragstart="return drag(event)" ondragend="dragEnd(event)">
 </div>
 </div>
 <br>
-<div id="music" style="display:none;">
+<div id="music">
 <!-- When the image is dragged into the specified area a music player will show here -->
 </div>
 
