--- a/Teams/Amazing-As/Dog Website/cockerspaniel.html
+++ b/Teams/Amazing-As/Dog Website/cockerspaniel.html
@@ -3,8 +3,51 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <title>Amazing A's Dogs</title>
-<link rel="stylesheet" type="text/css" href="style.css">
 <style type="text/css">
+
+body
+{
+  
+background-image:url("http://www.albany.edu/~gh445682/dog/bg.png");
+background-repeat:repeat;
+}
+#sideBar {
+	float: left;
+	width: 22%;
+	margin-left: 62px;
+}
+#Content {
+	float: left;
+	width: 63%;
+	margin-left: 20px;
+}
+
+.container {
+	width: 960px;
+	height: auto;
+	margin-top: 0;
+	margin-right: auto;
+	margin-bottom: 0;
+	margin-left: auto;
+}
+
+#header {
+	margin-left: 62px;
+}
+
+#NavBar {
+	margin-top: 0px;
+	margin-left: 75px;
+}
+
+.description {
+  color: #fff;
+}
+
+.descriptionh {
+  color: #fff;
+}
+
 .container #Content figure figcaption {
 	color: #FFF;
 }
@@ -20,7 +63,7 @@
     <p><img src="http://www.albany.edu/~gh445682/dog/bone.png" alt="bone" width="167" height="73" hspace="20"></p>
     <p><img src="http://www.albany.edu/~gh445682/dog/bucket.png" alt="bucket" width="208" height="453" border="0" usemap="#Map">
       <map name="Map">
-        <area shape="rect" coords="10,83,197,165" href="germanshephard.html" alt="German Link">
+        <area shape="rect" coords="10,83,197,165" href="germanshepard.html" alt="German Link">
         <area shape="rect" coords="10,164,197,244" href="Labrador Retriever.html" alt="Lab Link">
         <area shape="rect" coords="10,243,197,323" href="cockerspaniel.html" alt="Cocker Link">
         <area shape="rect" coords="10,322,197,388" href="shistzu.html" alt="Shitzu Link">
@@ -39,7 +82,7 @@
       <li><span dir="LTR"> </span>Bread initially to hunt squirrels or as bird retrievers </li>
     </ul>
 
-	<video width="320" height="240" controls autoplay="autoplay">
+	<video width="320" height="240" controls>
 		<source src="/videos/cocker.mp4" type="video/mp4">
 		Your browser does not support the video tag.
 	</video>
@@ -51,7 +94,7 @@
 	<figure><img src="https://dl.dropbox.com/u/23281901/cocker_pic.jpg" alt="Cocker Spaniel" />
 	<figcaption>
 	  <p>This is belived to be the main Sire to all modern American Cocker Spaniels</p>
-</figcaption></figure>
+	</figcaption></figure>
 
     
   </div>
