--- a/Teams/Amazing-As/Dog Website/shistzu.html
+++ b/Teams/Amazing-As/Dog Website/shistzu.html
@@ -63,11 +63,11 @@ background-repeat:repeat;
     <p><img src="http://www.albany.edu/~gh445682/dog/bone.png" alt="bone" width="167" height="73" hspace="20"></p>
     <p><img src="http://www.albany.edu/~gh445682/dog/bucket.png" alt="bucket" width="208" height="453" border="0" usemap="#Map">
       <map name="Map">
-        <area shape="rect" coords="10,83,197,165" href="GermanShephard">
-        <area shape="rect" coords="10,164,197,244" href="LabRet">
-        <area shape="rect" coords="10,243,197,323" href="CockerSpaniel">
-        <area shape="rect" coords="10,322,197,388" href="shistzu">
-        <area shape="rect" coords="10,387,197,441" href="Pitbull">
+        <area shape="rect" coords="10,83,197,165" href="germanshepard.html">
+        <area shape="rect" coords="10,164,197,244" href="labret.html">
+        <area shape="rect" coords="10,243,197,323" href="cockerspaniel.html">
+        <area shape="rect" coords="10,322,197,388" href="shistzu.html">
+        <area shape="rect" coords="10,387,197,441" href="pitbull.html">
       </map>
       
     </p>
