--- a/Teams/Amazing-As/Dog Website/labret.html
+++ b/Teams/Amazing-As/Dog Website/labret.html
@@ -8,7 +8,7 @@
 body
 {
   
-background-image:url("lab.png");
+background-image:url("http://www.albany.edu/~gh445682/dog/bg.png");
 background-repeat:repeat;
 }
 #sideBar {
@@ -56,12 +56,12 @@ background-repeat:repeat;
 <body>
 <div class="container">
   <div id="header">
-    <p><img src="header.png" alt="header" width="842" height="93" border="0">
+    <p><img src="http://www.albany.edu/~gh445682/dog/header.png" alt="header" width="842" height="93" border="0">
     </p>
   </div>
   <div id="sideBar">
-    <p><img src="bone.png" alt="bone" width="167" height="73" hspace="20"></p>
-    <p><img src="bucket.png" alt="bucket" width="208" height="453" border="0" usemap="#Map">
+    <p><img src="http://www.albany.edu/~gh445682/dog/bone.png" alt="bone" width="167" height="73" hspace="20"></p>
+    <p><img src="http://www.albany.edu/~gh445682/dog/bucket.png" alt="bucket" width="208" height="453" border="0" usemap="#Map">
       <map name="Map">
         <area shape="rect" coords="10,83,197,165" href="germanshepard.html">
         <area shape="rect" coords="10,164,197,244" href="labret.html">
@@ -75,6 +75,11 @@ background-repeat:repeat;
     <p>&nbsp;</p>
   </div>
   <div id="Content">
+ <figure><img src="/images/lab.png" width="320" height="240">
+    <figcaption>
+	  <p>Picture of a Labrador Retriever.</p>
+   </figcaption>
+   </figure>
     <h1> Fun Facts about Labrador Retriever: </h1>
     <ul>
       <li><span dir="LTR"> </span>Labs are the most popular breed for dog owners world wide.</li>
@@ -90,7 +95,7 @@ background-repeat:repeat;
     <br>
     <br>
     <audio controls>
-    <source src="shihtzu.mp3" type="audio/mpeg">
+    <source src="/sounds/shihtzu.mp3" type="audio/mpeg">
      Your browser does not support the audio element.
     </audio>
     
