Finished. Everything including images working.

--- a/Teams/Amazing-As/Dog Website/index.html
+++ b/Teams/Amazing-As/Dog Website/index.html
@@ -49,9 +49,8 @@ margin-left: 75px;
 }
 
 #div1 {
-	width:200px;
+	width:250px;
 	height:200px;
-	padding:10px;
 	border:1px solid #aaaaaa;
 	float: right;
 }
@@ -107,11 +106,11 @@ ev.target.appendChild(document.getElementById(data));
 
 <div id="div1" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
 <br>
-<img src="/images/Amazing_A/dog1.jpg" name="drag1" width="200" height="200" vspace="10" id="drag1" draggable="true" ondragstart="drag(event)">
-<img id="drag2" src="/images/Amazing_A/dog2.jpg" draggable="true" ondragstart="drag(event)" width="200" height="200">
-<img src="/images/Amazing_A/dog3.jpg" name="drag3" width="200" height="200" hspace="100" vspace="10" id="drag3" draggable="true" ondragstart="drag(event)">
-<img src="/images/Amazing_A/dog4.jpeg" name="drag4" width="200" height="200" vspace="20" id="drag4" draggable="true" ondragstart="drag(event)">
-<img src="/images/Amazing_A/dog5.jpeg" name="drag5" width="200" height="200" hspace="100" vspace="20" id="drag5" draggable="true" ondragstart="drag(event)">
+<img src="http://www.albany.edu/~gh445682/dog/cs.png" name="drag1" width="250" height="200" id="drag1" draggable="true" ondragstart="drag(event)">
+<img id="drag2" src="http://www.albany.edu/~gh445682/dog/gr.png" draggable="true" ondragstart="drag(event)" width="250" height="200">
+<img src="http://www.albany.edu/~gh445682/dog/gs.png" name="drag3" width="250" height="200" id="drag3" draggable="true" ondragstart="drag(event)">
+<img src="http://www.albany.edu/~gh445682/dog/pl.png" name="drag4" width="250" height="200" id="drag4" draggable="true" ondragstart="drag(event)">
+<img src="http://www.albany.edu/~gh445682/dog/st.png" name="drag5" width="250" height="200" id="drag5" draggable="true" ondragstart="drag(event)">
   
   </div>
   
