--- a/Teams/Eclectic-A-Team/Project_One/geolocation.html
+++ b/Teams/Eclectic-A-Team/Project_One/geolocation.html
@@ -1,17 +1,21 @@
-<!DOCTYPE HTML>
+                                            
+<!DOCTYPE html>
 <html>
-<head>
+<body>
+<div id="map"></div>
+<div id="map-directions"></div>
+</body>
+</html>
 <script src="http://maps.google.se/maps/api/js?sensor=false"></script>
 <script>
-  function Geolocate() {
-  	var directionsService = new google.maps.DirectionsService(),
+	(function () {
+		var directionsService = new google.maps.DirectionsService(),
 			directionsDisplay = new google.maps.DirectionsRenderer(),
 			createMap = function (start) {
 				var travel = {
-						origin : (start.coords)? new google.maps.LatLng(start.lat, start.lng) : start.address,
-						destination : "Washington Avenue Armory",
+						origin : (start.coords)? new google.maps.LatLng(start.lat, start.lng) : start.address, destination : "195 Washington Ave Albany, NY 12210",
 						travelMode : google.maps.DirectionsTravelMode.DRIVING
-
+						
 					},
 					mapOptions = {
 						zoom: 6,
@@ -29,7 +33,35 @@
 					}
 				});
 			};
-			var name = document.getElementbyId("namewhatever");
+
+			// Check for geolocation support	
+			if (navigator.geolocation) {
+				navigator.geolocation.getCurrentPosition(function (position) {
+						// Success!
+						createMap({
+							coords : true,
+							lat : position.coords.latitude,
+							lng : position.coords.longitude
+						});
+					}, 
+					function () {
+						// Gelocation fallback: Defaults to Albany, New York
+						createMap({
+							coords : false,
+							address : "Albany, New York"
+						});
+					}
+				);
+			}
+			else {
+				// No geolocation fallback: Defaults to Albany, New York
+				createMap({
+					coords : false,
+					address : "Albany, Ney York"
+				});
+			}
+	})();
+</script>ementbyId("namewhatever");
 			name.innerHTML = travel;
 
 			// Check for geolocation support	
