--- a/Teams/Eclectic-A-Team/Project_One/index.html
+++ b/Teams/Eclectic-A-Team/Project_One/index.html
@@ -8,11 +8,41 @@
          .pad{
             padding-left:10px;padding-right:10px
          }
+         body
+{
+background-color:#000000;
+}
+h1
+{
+color:#B93B8F;
+text-align:center;
+font-family:"Verdana";
+}
+h3
+{
+color:#FF0040;
+text-align:center;
+font-family:"Verdana";
+}
+p
+{
+font-family:"Verdana";
+font-size:14px;
+color:#FFFFFF;
+}
+a:link {color:#B93B8F;} 
+a:visited {color:#FF0040;} 
+a:hover {color:#FF0040;}
+a:active {color:#FFFFFF;}
       </style>
   </head>
 
 
   <body>
+  <h1>The Eclectic A-Team's
+<br>
+ Music Site</h1>
+<h3>Acts coming to the area this Spring</h3>
     <div style="text-align:center">
     </div>
       <div id="musicContainer">
