--- a/Teams/Eclectic-A-Team/Project_One/index.html
+++ b/Teams/Eclectic-A-Team/Project_One/index.html
@@ -2,39 +2,10 @@
 <html>
   <head>
       <link rel="stylesheet" type="text/css" href="player.css"/>  
+	  <link rel="stylesheet" type="text/css" href="main.css"/>
       <script src="player.js" type="text/javascript"></script>
       <title>Eclectic A-Team Project One</title>
-      <style type="text/css">
-         .pad{
-            padding-left:10px;padding-right:10px
-         }
-         body
-{
-background-color:#000000;
-}
-h1
-{
-color:#B93B8F;
-text-align:center;
-font-family:"Verdana";
-}
-h3
-{
-color:#FF0040;
-text-align:center;
-font-family:"Verdana";
-}
-p
-{
-font-family:"Verdana";
-font-size:14px;
-color:#FFFFFF;
-}
-a:link {color:#B93B8F;} 
-a:visited {color:#FF0040;} 
-a:hover {color:#FF0040;}
-a:active {color:#FFFFFF;}
-      </style>
+
   </head>
 
 
