--- a/Teams/Eclectic-A-Team/Project_One/index.html
+++ b/Teams/Eclectic-A-Team/Project_One/index.html
@@ -15,6 +15,22 @@
  Music Site</h1>
 <h3>Acts coming to the area this Spring</h3>
     <div style="text-align:center">
+    <table border="1">
+<tr>
+<th>Band/Artis</th>
+<th>Date</th>
+<th>Venue</th>
+<th>Performing City</th>
+</tr>
+<tr>
+<td>Oberhoffer</td>
+<td>row 1, cell 2</td>
+</tr>
+<tr>
+<td>row 2, cell 1</td>
+<td>row 2, cell 2</td>
+</tr>
+</table> 
     </div>
       <div id="musicContainer">
 <div id="dropArea" ondrop="drop(event);startMusic()" ondragover="return dragOver(event)">
