--- a/Teams/Eclectic-A-Team/Project_One/index.html
+++ b/Teams/Eclectic-A-Team/Project_One/index.html
@@ -24,11 +24,15 @@
 </tr>
 <tr>
 <td>Oberhoffer</td>
-<td>row 1, cell 2</td>
+<td>3/1/2013</td>
+<td>Valentines</td>
+<td>Albany, NY</td>
 </tr>
 <tr>
-<td>row 2, cell 1</td>
-<td>row 2, cell 2</td>
+<td>Machine Gun Kelly</td>
+<td>3/1/2013</td>
+<td>Washington Avenue Armory</td>
+<td>Albany, NY</td>
 </tr>
 </table> 
     </div>
