--- a/Teams/Eclectic-A-Team/Project_One/index.html
+++ b/Teams/Eclectic-A-Team/Project_One/index.html
@@ -62,7 +62,8 @@ ondragstart="return drag(event)" ondragend="dragEnd(event)">
 <!-- When the image is dragged into the specified area a music player will show here -->
 </div>
 
-
+<div id="map"></div>
+<div id="map-directions"></div>
   </body>
 
 
