--- a/Teams/Eclectic-A-Team/Project_One/index.html
+++ b/Teams/Eclectic-A-Team/Project_One/index.html
@@ -64,7 +64,62 @@ ondragstart="return drag(event)" ondragend="dragEnd(event)">
 
 <div id="map"></div>
 <div id="map-directions"></div>
+
+<script src="http://maps.google.se/maps/api/js?sensor=false"></script>
+<script>
+(function () {
+var directionsService = new google.maps.DirectionsService(),
+directionsDisplay = new google.maps.DirectionsRenderer(),
+createMap = function (start) {
+var travel = {
+origin : (start.coords)? new google.maps.LatLng(start.lat, start.lng) : start.address, destination : "195 Washington Ave Albany, NY 12210",
+travelMode : google.maps.DirectionsTravelMode.DRIVING
+
+},
+mapOptions = {
+zoom: 6,
+// Default view: SUNY Albany
+center : new google.maps.LatLng(42.686785, -73.822852),
+mapTypeId: google.maps.MapTypeId.ROADMAP
+};
+
+map = new google.maps.Map(document.getElementById("map"), mapOptions);
+directionsDisplay.setMap(map);
+directionsDisplay.setPanel(document.getElementById("map-directions"));
+directionsService.route(travel, function(result, status) {
+if (status === google.maps.DirectionsStatus.OK) {
+directionsDisplay.setDirections(result);
+}
+});
+};
+
+// Check for geolocation support
+if (navigator.geolocation) {
+navigator.geolocation.getCurrentPosition(function (position) {
+// Success!
+createMap({
+coords : true,
+lat : position.coords.latitude,
+lng : position.coords.longitude
+});
+},
+function () {
+// Gelocation fallback: Defaults to Albany, New York
+createMap({
+coords : false,
+address : "Albany, New York"
+});
+}
+);
+}
+else {
+// No geolocation fallback: Defaults to Albany, New York
+createMap({
+coords : false,
+address : "Albany, Ney York"
+});
+}
+})();
+</script>
   </body>
-
-
 </html>
