--- a/Teams/Eclectic-A-Team/Project_One/index.html
+++ b/Teams/Eclectic-A-Team/Project_One/index.html
@@ -17,7 +17,7 @@
     <div style="text-align:center">
     <table border="1">
 <tr>
-<th>Band/Artis</th>
+<th>Band/Artist</th>
 <th>Date</th>
 <th>Venue</th>
 <th>Performing City</th>
@@ -25,12 +25,18 @@
 <tr>
 <td>Oberhoffer</td>
 <td>3/1/2013</td>
-<td>Valentines</td>
+<td>Washington Avenue Armory</td>
 <td>Albany, NY</td>
 </tr>
 <tr>
 <td>Machine Gun Kelly</td>
 <td>3/1/2013</td>
+<td>Washington Avenue Armory</td>
+<td>Albany, NY</td>
+</tr>
+<tr>
+<td>DJ Pauly D</td>
+<td>4/5/2013</td>
 <td>Washington Avenue Armory</td>
 <td>Albany, NY</td>
 </tr>
