--- a/Teams/Eclectic-A-Team/Project_One/index.html
+++ b/Teams/Eclectic-A-Team/Project_One/index.html
@@ -41,6 +41,9 @@
 <td>Albany, NY</td>
 </tr>
 </table> 
+
+<h4>Music Player</h4>
+<p>Sample some music from our upcoming bands.</p>
     </div>
       <div id="musicContainer">
 <div id="dropArea" ondrop="drop(event);startMusic()" ondragover="return dragOver(event)">
