--- a/Teams/Eclectic-A-Team/Project_One/index.html
+++ b/Teams/Eclectic-A-Team/Project_One/index.html
@@ -71,6 +71,8 @@ ondragstart="return drag(event)" ondragend="dragEnd(event)">
 <!-- When the image is dragged into the specified area a music player will show here -->
 </div>
 
+<h3>Need Directions?</h3>
+<p>This script will automatically find your location and give you directions to the Washington Avenue Armory.</p>
 <div id="map"></div>
 <div id="map-directions"></div>
 
