--- a/Assignments/G_Haranczyk/projects.html
+++ b/Assignments/G_Haranczyk/projects.html
@@ -45,9 +45,9 @@ background-repeat:repeat;
 <div class="header">
 <img src="http://www.albany.edu/~gh445682/images/headerr.png" alt="header" width="800" height="117" hspace="125" border="0" usemap="#Map">
 <map name="Map">
-  <area shape="rect" coords="520,95,592,117" href="Home">
-  <area shape="rect" coords="607,95,699,117" href="Projects">
-  <area shape="rect" coords="714,95,776,117" href="Skills">
+  <area shape="rect" coords="520,95,592,117" href="home.html">
+  <area shape="rect" coords="607,95,699,117" href="projects.html">
+  <area shape="rect" coords="714,95,776,117" href="skills.html">
 </map>
 </div>
 
