removing <article> for spacing issue

--- a/Teams/Amazing-As/Dog Website/cockerspaniel.html
+++ b/Teams/Amazing-As/Dog Website/cockerspaniel.html
@@ -88,9 +88,9 @@ background-repeat:repeat;
 	</video>
     
     <h1 class="descriptionh">Why is it your favorite dog?</h1>
-    <p class="description"><article>The Cocker Spaniel is my favorite dog as this is the breed of dog that I have.  They are friendly, intelligent, gentile dogs 
+    <p class="description">The Cocker Spaniel is my favorite dog as this is the breed of dog that I have.  They are friendly, intelligent, gentile dogs 
 	that make excellent pets.  My dog used to be energetic which was great as kids, we would play with him for hours. Now that he is older, he has become
-	a quiet and lazy lap dog which suits my parents lifestyle perfectly.</article></p>
+	a quiet and lazy lap dog which suits my parents lifestyle perfectly.</p>
 	<figure><img src="https://dl.dropbox.com/u/23281901/cocker_pic.jpg" alt="Cocker Spaniel" />
 	<figcaption>
 	  <p>This is belived to be the main Sire to all modern American Cocker Spaniels</p>
