--- a/Teams/PRO-2013/index.html
+++ b/Teams/PRO-2013/index.html
@@ -8,7 +8,7 @@
 <body>
 <p><a href="Duckys.html">Anthony Phillips</a></p>
 <p><a href="assign1_yk.html">Yul Kim</a></p>
-<p><a href="pop_ducks_ec.html">Eric</a></p>
+<p><a href="assign1_ec.html">Eric</a></p>
 <p><a href="Sarun_Ducks_Facts.html">Sarun</a></p>
 </body>
 </html>
