--- a/Assignments/index.html
+++ b/Assignments/index.html
@@ -12,6 +12,7 @@
 <center><a href="Sarun_Sangchanintra/index.html">Sarun Sangchanintra</a></center>
 <center><a href="J_Cope/index.html">Josh Cope </a></center>
 <center><a href="J_James/home.html">Johnny James </a></center>
+<center><a href="G_Haranczyk/home.html">Grzegorz (Greg) Haranczyk </a></center>
 <br>
 <br>
 <center>
