--- a/Assignments/G_Haranczyk/home.html
+++ b/Assignments/G_Haranczyk/home.html
@@ -14,17 +14,17 @@ background-repeat:repeat;
 
 .content {
   background-image: url("http://www.albany.edu/~gh445682/images/content.png");
-	width: 78%;
-	margin-top: 30px;
-	margin-left: 80px;
-	padding-left: 30px;
-	padding-right: 30px;
+width: 78%;
+margin-top: 30px;
+margin-left: 80px;
+padding-left: 30px;
+padding-right: 30px;
 }
-	
+
 .contentfont {
-	color: #FFF;
-	font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
-	font-size: 18px;
+color: #FFF;
+font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
+font-size: 18px;
 }
 </style>
 
@@ -46,7 +46,7 @@ slideimages[i].src=slideshowimages.arguments[i]
 <body>
 
 <div class="header">
-<img src="http://www.albany.edu/~gh445682/images/header.png" alt="header" width="800" height="117" hspace="125" border="0" usemap="#Map">
+<center><img src="http://www.albany.edu/~gh445682/images/header.png" alt="header" width="800" height="117" hspace="125" border="0" usemap="#Map"></center>
 <map name="Map">
   <area shape="rect" coords="520,95,592,117" href="home.html">
   <area shape="rect" coords="607,95,699,117" href="projects.html">
@@ -57,7 +57,7 @@ slideimages[i].src=slideshowimages.arguments[i]
 <div class="content">
   <p>
 
-<a href="javascript:gotoshow()"><img src="http://www.albany.edu/~gh445682/images/manhattan.png" name="slide" width=450 height=350 hspace="175" vspace="50" border=0 align="middle"></a>
+<center><a href="javascript:gotoshow()"><img src="http://www.albany.edu/~gh445682/images/manhattan.png" name="slide" width=450 height=350 hspace="175" vspace="50" border=0 align="middle"></a></center>
 <script>
 slideshowimages("http://www.albany.edu/~gh445682/images/manhattan.png","http://www.albany.edu/~gh445682/images/knicks.png","http://www.albany.edu/~gh445682/images/yankees.png","http://www.albany.edu/~gh445682/images/poland.png","http://www.albany.edu/~gh445682/images/liberty.JPG")
 
