Added the background

--- a/Teams/Amazing-As/Dog Website/germanshepard.html
+++ b/Teams/Amazing-As/Dog Website/germanshepard.html
@@ -6,6 +6,13 @@
 <link rel="stylesheet" type="text/css" href="style.css">
 
 <style type="text/css">
+body
+{
+  
+background-image:url("http://www.albany.edu/~gh445682/dog/bg.png");
+background-repeat:repeat;
+}
+
 .container #Content iframe {
 	float: left;
 	padding-right: 10px;
