Fixed the background and font color

--- a/Teams/Amazing-As/Dog Website/germanshepard.html
+++ b/Teams/Amazing-As/Dog Website/germanshepard.html
@@ -13,11 +13,48 @@ background-image:url("http://www.albany.edu/~gh445682/dog/bg.png");
 background-repeat:repeat;
 }
 
+#sideBar {
+float: left;
+width: 22%;
+margin-left: 62px;
+}
+#Content {
+float: left;
+width: 63%;
+margin-left: 20px;
+}
+
+.container {
+width: 960px;
+height: auto;
+margin-top: 0;
+margin-right: auto;
+margin-bottom: 0;
+margin-left: auto;
+}
+
+#header {
+margin-left: 62px;
+}
+
+#NavBar {
+margin-top: 0px;
+margin-left: 75px;
+}
+
 .container #Content iframe {
-	float: left;
-	padding-right: 10px;
+float: left;
+padding-right: 10px;
 }
 .container #Content p b {
+}
+
+.description {
+  color: #fff;
+}
+
+.descriptionh {
+  color: #fff;
 }
 </style></head>
 
@@ -52,23 +89,23 @@ background-repeat:repeat;
       <li><span dir="LTR"> </span>The breed is fairly new dog breed. It began in Germany in 1899 and came to the US in 1907.</li>
       <li><span dir="LTR"> </span>The most famous German Shepherd Dog was Rin Tin Tin.</li>
     <li><span dir="LTR"> </span>The weight of German Shepherd Dogs range from 75 - 95 pounds.</li>
-	  <li><span dir="LTR"> </span>The height of the German Shepherd ranges from 24 - 26 inches.</li>
-	  <li><span dir="LTR"> </span>Life of German Shepherd Dogs: the life expectancy of the German Shepherd is between 12 - 14 years.</li>
-	  <li><span dir="LTR"> </span>German Shepherd Dogs are among the top five most popular dogs in the United States.</li>
+<li><span dir="LTR"> </span>The height of the German Shepherd ranges from 24 - 26 inches.</li>
+<li><span dir="LTR"> </span>Life of German Shepherd Dogs: the life expectancy of the German Shepherd is between 12 - 14 years.</li>
+<li><span dir="LTR"> </span>German Shepherd Dogs are among the top five most popular dogs in the United States.</li>
     </ul>
     
     <p><b>German Shepherd Audio</b><b> &amp; Video</b></p>
     <iframe width="290" height="215" src="http://www.youtube.com/embed/MDKYIWXcpB4" frameborder="0" allowfullscreen></iframe>
     <iframe width="290" height="215" src="http://www.youtube.com/embed/T64feVJWiCQ" frameborder="0" allowfullscreen></iframe>
-	<br>
-	<p>&nbsp;</p>
-	<p>&nbsp;</p>
-	<p>&nbsp;</p>
-	<p>&nbsp;</p>
-		<p>&nbsp;</p>
-		<p><br>
+<br>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p><br>
     </p>
-	<h1 class="descriptionh">Why is it my favorite dog?</h1>
+<h1 class="descriptionh">Why is it my favorite dog?</h1>
 <p class="description">
   The German shepherd is my favorite dog because it is one of the most popular dog breeds in the world. Besides being a common pet, it is also used as a police dog in many different countries. Its large variety of scents allows it to be a great tracking dog. As it grows up it becomes very strong and athletic. Because of its physique it is always willing to try challenging activities and exercises. Overall it is exceptionally intelligent, loyal, and versatile. Also when well-socialized and well-trained, it can learn and do almost anything.
 </p>
@@ -77,4 +114,5 @@ background-repeat:repeat;
  
 </div>
 </body>
+</html>
 </html>
