--- a/Assignments/G_Haranczyk/skills.html
+++ b/Assignments/G_Haranczyk/skills.html
@@ -46,8 +46,8 @@ background-repeat:repeat;
 
 
 <div class="header">
-<center><img src="http://www.albany.edu/~gh445682/images/headerg.png" alt="header" width="800" height="117" hspace="125" border="0" usemap="#Map">
-<map name="Map"></center>
+<center><img src="http://www.albany.edu/~gh445682/images/headerg.png" alt="header" width="800" height="117" hspace="125" border="0" usemap="#Map"></center>
+<map name="Map">
   <area shape="rect" coords="520,95,592,117" href="home.html">
   <area shape="rect" coords="607,95,699,117" href="projects.html">
   <area shape="rect" coords="714,95,776,117" href="skills.html">
