--- a/Teams/Mellow-United-Nations/Project-One/Locations.html
+++ b/Teams/Mellow-United-Nations/Project-One/Locations.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html>
-<header>
-<style type="text/css">
-body {background-color:blue; text-align:center;}
-h1 {color:blue; font-family:"Times New Roman", serif; font-size:40px;}
-p {color:blue; font-family:"Times New Roman", serif; font-size:20px;}
-.div1 {background-color:orange; width:1200px; margin:auto;}
-.div1-1 {background-color:orange; margin:auto; width:400px;}
-.div1-1-1{background-color:orange; float:left; width:100px; }
-.div2{background-color:orange; margin:auto; width:800px
+<head>
+<link rel="stylesheet"
+type="text/css"
+href="Project1style.css" />
+<title>
+Locations
+</title>
+<style>
 <!--Box coding-->
 div.img
 {
@@ -34,7 +33,7 @@ div.desc
   margin: 2px;
 }
 </style>
-</header>
+</head>
 
 <body>
 
