--- a/Teams/Mellow-United-Nations/index.html
+++ b/Teams/Mellow-United-Nations/index.html
@@ -2,34 +2,41 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <title>
-index
+Mellow United Nation's Home Page
 </title>
 <body>
-<a href="Jose.html"
+<h1><center>cMellow United Nations</center></h1>
+<br>
+<h2><center>Our Group Members:</center></h2>
+<br>
+<center><a href="Jose.html"
 title="suny albany webpage">
 Jose's page!
-</a>
-<a href="MMpage.html"
+</a></center>
+<br>
+<center><a href="MMpage.html"
 title="suny albany webpage">
 Mike's page
-</a>
-<a href="Kirstine.html"
+</a></center>
+<br>
+<center><a href="Kirstine.html"
 title="suny albany webpage">
 Kirstine's page
-</a>
-<a href="MPignataro.html"
+</a></center>
+<center><a href="MPignataro.html"
 title="suny albany webpage">
 M's page
-</a>
-<a href="MattCollinspage.html"
+</a></center>
+<center><a href="MattCollinspage.html"
 title="suny albany webpage">
 Matt's page
-</a>
-<a href="JeremyPage.html"
+</a></center>
+<center><a href="JeremyPage.html"
 title="suny albany webpage">
 Jeremy's page
-</a>
+</a></center>
 
+<h2>Our Projects:</h2>
 <a href="Project-One/HomePage.html">Project One</a>
 
 </body>
