--- a/Teams/Mellow-United-Nations/Kirstine.html
+++ b/Teams/Mellow-United-Nations/Kirstine.html
@@ -1,7 +1,7 @@
-<html>
+<!DOCTYPE html>
 <body>
 
-<h1>Kirstine's Page</h1>
+<h1><center>Kirstine's Page</center></h1>
 <p>My Opinions on Teaching and Learning</p>
 
 </body>
