--- a/Assignments/index.html
+++ b/Assignments/index.html
@@ -14,6 +14,7 @@
 <center><a href="J_James/home.html">Johnny James </a></center>
 <center><a href="G_Haranczyk/home.html">Grzegorz (Greg) Haranczyk </a></center>
 <center><a href="Michael_Mitchell/OO_PortfolioHome.html">Michael Mitchell </a></center>
+<center><a href="Michael_Pignataro/Index.html">Michael Pignataro</a></center>
 <br>
 <br>
 <center>
