I changed Index.html file

--- a/Assignments/index.html
+++ b/Assignments/index.html
@@ -1,3 +1,4 @@
+
 <html>
 
 <head>
@@ -15,6 +16,7 @@
 <center><a href="G_Haranczyk/home.html">Grzegorz (Greg) Haranczyk </a></center>
 <center><a href="Michael_Mitchell/OO_PortfolioHome.html">Michael Mitchell </a></center>
 <center><a href="Michael_Pignataro/Index.html">Michael Pignataro</a></center>
+<center><a href="Jie_Zou/mainpage.html">Jie Zou</a></center>
 <br>
 <br>
 <center>
