I changed index.html

--- a/Teams/Yummy-Tacos/Activities/index.html
+++ b/Teams/Yummy-Tacos/Activities/index.html
@@ -8,7 +8,7 @@
 
 <center><h1>INF-362 Web Development Course Activities</h1></center>
 <center><a href="HTML5-Javascript/index.html">HTML5-JavaScript Activity</a></center>
-
+<center><a href="albany.edu/~jz873614/inf362/homepage.html">Smartphone Review</a>
 <br>
 <br>
 <center>
