I edited index.html

--- a/Teams/Yummy-Tacos/index.html
+++ b/Teams/Yummy-Tacos/index.html
@@ -9,7 +9,7 @@ body {background-image:url('http://www.cardapiosdafronteira.com.br/index_htm_fil
 <body>
 <center><h1>Welcome to Yummy Tacos's Page</h1></center>
 
-<center><a href="Dog Website/index.html">Dog Website</a></center>
+<center><a href="albany.edu/~jz873614/inf362/homepage.html">Electrontic Reviews</a></center>
 </body>
 </html>
 
