--- a/Teams/PRO-2013/index.html
+++ b/Teams/PRO-2013/index.html
@@ -13,10 +13,10 @@
 <h2>THE HONKIEST PLACE ON EARTH</h2>
 <br />
 <h3>Honorary Duckateers</h3>
-<p><a href="">Anthony Phillips</a></p>
-<p><a href="">Yul Kim</a></p>
-<p><a href="">Sarum Sangchanintira</a></p>
-<p><a href="">Eric</a></p>
+<p><a href="assign1_ap.html">Anthony Phillips</a></p>
+<p><a href="assign1_yk.html">Yul Kim</a></p>
+<p><a href="assign1_ss.html">Sarum Sangchanintira</a></p>
+<p><a href="assign1_ec.html">Eric</a></p>
 </div>
 
 </body>
