--- a/Teams/Mellow-United-Nations/Project-One/HomePage.html
+++ b/Teams/Mellow-United-Nations/Project-One/HomePage.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE HTML>
 <html>
 <head>
@@ -17,17 +18,22 @@ HomePage
 <div class="div2">
 
 <div class="div1-1">
-<div class="div1-1-1"><a href="HomePage.html">Home   </a></div>
+<div class="div1-1-1"><a href="HomePage.html">  Home   </a></div>
 <div class="div1-1-1"><a href="Videos.html">   Videos   </a></div>
 <div class="div1-1-1"><a href="Locations.html">   Locations   </a></div>
 <div class="div1-1-1"><a href="Forms.html">   Forms   </a></div>
 </div>
 <br />
 <br />
-<img src="Knicks.jpg"  width="150px" alt="NYknicks" border="0"/>
+<img src="http://www.fastcodesign.com/multisite_files/codesign/imagecache/slideshow-large/slideshow/2012/12/1671481-slide-slide-4-the-amazing-ny-knicks-logo-that-should-have-been_1.jpg"  width="150px" alt="NYknicks" border="0"/>
 <p>This Page is dedicated to following one of the greatest basketball teams in professional basket ball, the New York Knicks! 
 The team was established in 1946 and continues to be a successful team to this date.
 </p>
+</div>
+</body>
+</html>
+
+
 </div>
 </body>
 </html>
