--- a/Teams/Mellow-United-Nations/Project-One/Videos.html
+++ b/Teams/Mellow-United-Nations/Project-One/Videos.html
@@ -25,7 +25,7 @@ Videos
 </div>
 <br />
 <br />
-<img src="Knicks.jpg"  width="150px" alt="NYknicks" border="0"/>
+<img src="http://www.fastcodesign.com/multisite_files/codesign/imagecache/slideshow-large/slideshow/2012/12/1671481-slide-slide-4-the-amazing-ny-knicks-logo-that-should-have-been_1.jpg"  width="150px" alt="NYknicks" border="0"/>
 <br />
 <iframe width="400" height="215" src="http://www.youtube.com/embed/Sg2lOGrz6FQ" frameborder="0" allowfullscreen></iframe>
 <iframe width="400" height="215" src="http://www.youtube.com/embed/rxZldI21dzU" frameborder="0" allowfullscreen></iframe>
