--- a/Assignments/index.html
+++ b/Assignments/index.html
@@ -22,6 +22,8 @@
 <center><a href="Code_Teague/cody_index.html">Cody Teague</a></center>
 <center><a href="K_Perez/index.html">Kenniee Perez</a></center>
 <center><a href="Michael_Cariello/home.html">Michael Cariello</a></center>
+<center><a href="A_Phillips/about.html">Anthony Phillips</a></center>
+<center><a href="Y_Kim/index.html">Yul Kim</a></center>
 <br>
 <br>
 <center>
