--- a/Assignments/index.html
+++ b/Assignments/index.html
@@ -20,7 +20,7 @@
 <center><a href="Jie_Zou/mainpage.html">Jie Zou</a></center>
 <center><a href="D_Francois/assignment3.html">David Francois</a></center>
 <center><a href="Cody_Teague/cody_index.html">Cody Teague</a></center>
-<center><a href="K_Perez/inex.html">Kenniee Perez</a></center>
+<center><a href="K_Perez/My Porfolio.html">Kenniee Perez</a></center>
 <center><a href="Michael_Cariello/home.html">Michael Cariello</a></center>
 <center><a href="A_Phillips/about.html">Anthony Phillips</a></center>
 <center><a href="Y_Kim/index.html">Yul Kim</a></center>
