--- a/Assignments/K_Perez/My Portfolio.html
+++ b/Assignments/K_Perez/My Portfolio.html
@@ -14,9 +14,9 @@
 <tr>
 <td valign="top" width="150" style="padding-top: 5px;>
 <center><font face="arial" color="FFFFFF" size="3">
-<a href="My Porfolio.html"><h3>My Porfolio</h3></a>
-<a href="BestRatedAutos.html"><h3>My Car Project</h3></a>
-<a href="Resume.html"><h3>My Resume</h3></a>
+<a href="My Portfolio.html"><h3>My Portfolio</h3></a>
+<a href="My Project.html"><h3>My Project</h3></a>
+<a href="Skills.html"><h3>Skills</h3></a>
 </center>
 </font>
 </td>
